--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html>
 <head>
 <link rel="shortcut icon" type="image/x-icon" href="320/i/favicon.ico" />
-<!-- 三种尺寸，都必须是png 图片 -->
 <link rel="apple-touch-icon-precomposed" sizes="57x57" href="320/i/ico57.png" />
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="320/i/ico72.png" />
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="320/i/ico114.png" />
-<!-- 320*460 都必须是png 图片-->
 <link rel="apple-touch-startup-image" href="320/i/startup.png">
 <meta content="yes"name="apple-mobile-web-app-capable"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-<meta nave="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0">
+<meta nave="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>welcome</title>
 </head>
