--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta nave="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
-<link rel="shortcut icon" type="image/x-icon" href="320/i/favicon.ico">
-<link rel="apple-touch-icon-precomposed" sizes="57x57" href="320/i/ico57.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="320/i/ico72.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="320/i/ico114.png">
-<link rel="apple-touch-startup-image" href="320/i/startup.png">
-<title>welcome</title>
-</head>
-<body>
-<h1>librajt</h1>
-<h2>Hey there :D</h2>
-</body>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<title>welcome</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<link rel="shortcut icon" type="image/x-icon" href="320/i/favicon.ico">
+		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="320/i/ico57.png">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="320/i/ico72.png">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="320/i/ico114.png">
+		<link rel="apple-touch-startup-image" href="320/i/startup.png">
+		<link rel="stylesheet" type="text/css" href="320/c/g.css">
+<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+	</head>
+	<body>
+		<h1>librajt</h1>
+		<h2>Hey there :D</h2>
+	</body>
 </html>
 
  
