--- a/m/index.html
+++ b/m/index.html
@@ -11,6 +11,7 @@
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="320/i/ico72.png">
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="320/i/ico114.png">
 		<link rel="apple-touch-startup-image" href="320/i/startup.png">
+		<link rel="apple-touch-startup-image" sizes="640x920" href="320/i/startup@2x.png">
 		<link rel="stylesheet" type="text/css" href="320/c/g.css">
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 	</head>
