--- a/m/index.html
+++ b/m/index.html
@@ -10,14 +10,14 @@
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="320/i/ico57.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="320/i/ico72.png">
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="320/i/ico114.png">
-		<link rel="apple-touch-startup-image" href="320/i/startup.png">
+		<link rel="apple-touch-startup-image" sizes="320x460" href="320/i/startup.png">
 		<link rel="apple-touch-startup-image" sizes="640x920" href="320/i/startup@2x.png">
 		<link rel="stylesheet" type="text/css" href="320/c/g.css">
-<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 	</head>
 	<body>
-		<h1>librajt</h1>
+		<h1><a href="/">librajt</a></h1>
 		<h2>Hey there :D</h2>
+		<p>How are you</p>
 	</body>
 </html>
 
