--- a/m/index.html
+++ b/m/index.html
@@ -2,23 +2,87 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<link rel="shortcut icon" type="image/x-icon" href="320/i/favicon.ico">
 		<title>welcome</title>
+		
+		<!-- 遵循自适应设计(RWD, Responsive Web Design)的原则，页面呈现宽度适应屏幕 -->
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+		
+		<!-- 允许应用全屏模式运行，通常称为独立模式 (standalone mode) 可以通过 window.navigator.standalone 属性来区别是否是独立模式运行 -->
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<link rel="shortcut icon" type="image/x-icon" href="320/i/favicon.ico">
-		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="320/i/ico57.png">
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="320/i/ico72.png">
-		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="320/i/ico114.png">
-		<link rel="apple-touch-startup-image" sizes="320x460" href="320/i/startup.png">
-		<link rel="apple-touch-startup-image" sizes="640x920" href="320/i/startup@2x.png">
+		
+		<!-- Web App 在主屏显示的图标 precomposed 指定高光 -->
+		<link rel="apple-touch-icon-precomposed" sizes="72x72"   for="iPad"          href="320/i/ico-ipad.png">
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" for="iPad Retina"   href="320/i/ico-ipad-retina.png">
+		
+		<link rel="apple-touch-icon-precomposed" sizes="57x57"   for="iPhone"        href="320/i/ico-iphone.png">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" for="iPhone Retina" href="320/i/ico-iphone-retina.png">
+		
+		<!-- 应用启动时显示的图像 -->
+		<link rel="apple-touch-startup-image" sizes="1024x748"  for="iPad landscape"          href="320/i/startup-ipad-landscape.png"          media="screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape)">
+		<link rel="apple-touch-startup-image" sizes="768x1004"  for="iPad portrait"           href="320/i/startup-ipad-portrait.png"           media="screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait) ">
+		<link rel="apple-touch-startup-image" sizes="2048x1496" for="iPad Retina landscape"   href="320/i/startup-ipad-retina-landscape.png"   media="screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2)">
+		<link rel="apple-touch-startup-image" sizes="1536x2008" for="iPad Retina portrait"    href="320/i/startup-ipad-retina-portrait.png"    media="screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait)  and (-webkit-min-device-pixel-ratio: 2)">
+		
+		<link rel="apple-touch-startup-image" sizes="480x300"   for="iPhone landscape"        href="320/i/startup-iphone-landscape.png"        media="screen and (max-device-width:320) and (orientation:landscape)">
+		<link rel="apple-touch-startup-image" sizes="320x460"   for="iPhone portrait"         href="320/i/startup-iphone-portrait.png"         media="screen and (max-device-width:320) and (orientation:portrait) ">
+		<link rel="apple-touch-startup-image" sizes="960x600"   for="iPhone Retina landscape" href="320/i/startup-iphone-retina-landscape.png" media="screen and (max-device-width:480px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2)">
+		<link rel="apple-touch-startup-image" sizes="640x920"   for="iPhone Retina portrait"  href="320/i/startup-iphone-retina-portrait.png"  media="screen and (max-device-width:480px) and (orientation:portrait)  and (-webkit-min-device-pixel-ratio: 2)">
+		
 		<link rel="stylesheet" type="text/css" href="320/c/g.css">
+		
+		<style>
+			.icon,.startup{background-size:100%;background-repeat:no-repeat;}
+			
+			@media screen and (min-device-width:481px) and (max-device-width:1024px) {
+				.icon{text-indent:-99em;width:72px;height:72px;background-image:url(320/i/ico-ipad.png)}
+			}
+			@media screen and (min-device-width:481px) and (max-device-width:1024px) and (-webkit-min-device-pixel-ratio: 2) {
+				.icon{text-indent:-99em;width:72px;height:72px;background-image:url(320/i/ico-ipad-retina.png)}
+			}
+			@media screen and (max-device-width:480px) {
+				.icon{text-indent:-99em;width:57px;height:57px;background-image:url(320/i/ico-iphone.png)}
+			}
+			@media screen and (max-device-width:480px) and (-webkit-min-device-pixel-ratio: 2) {
+				.icon{text-indent:-99em;width:57px;height:57px;background-image:url(320/i/ico-iphone-retina.png)}
+			}
+			
+			
+			@media screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape) {
+				.startup{text-indent:-99em;height:748px;background-image:url(320/i/startup-ipad-landscape.png)}
+			}
+			@media screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait)  {
+				.startup{text-indent:-99em;height:1004px;background-image:url(320/i/startup-ipad-portrait.png)}
+			}
+			@media screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2) {
+				.startup{text-indent:-99em;height:748px;background-image:url(320/i/startup-ipad-retina-landscape.png)}
+			}
+			@media screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait)  and (-webkit-min-device-pixel-ratio: 2) {
+				.startup{text-indent:-99em;height:1004px;background-image:url(320/i/startup-ipad-retina-portrait.png)}
+			}
+			@media screen and (max-device-width:320) and (orientation:landscape) {
+				.startup{text-indent:-99em;height:300px;background-image:url(320/i/startup-iphone-landscape.png)}
+			}
+			@media screen and (max-device-width:320) and (orientation:portrait)  {
+				.startup{text-indent:-99em;height:460px;background-image:url(320/i/startup-iphone-portrait.png)}
+			}
+			@media screen and (max-device-width:480px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2) {
+				.startup{text-indent:-99em;height:300px;background-image:url(320/i/startup-iphone-retina-landscape.png)}
+			}
+			@media screen and (max-device-width:480px) and (orientation:portrait)  and (-webkit-min-device-pixel-ratio: 2) {
+				.startup{text-indent:-99em;height:460px;background-image:url(320/i/startup-iphone-retina-portrait.png)}
+			}
+		</style>
 	</head>
 	<body>
-		<h1><a href="/">librajt</a></h1>
+		<h1><a href="?">librajt</a></h1>
 		<h2>Hey there :D</h2>
 		<p>How are you</p>
+		<h3>Icon</h3>
+		<div class="icon">not particular</div>
+		<h3>Startup</h3>
+		<div class="startup">not particular</div>
 	</body>
 </html>
 
- 
