--- a/m/index.html
+++ b/m/index.html
@@ -21,69 +21,126 @@
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" for="iPhone Retina" href="320/i/ico-iphone-retina.png">
 		
 		<!-- 应用启动时显示的图像 -->
-		<link rel="apple-touch-startup-image" sizes="1024x748"  for="iPad landscape"          href="320/i/startup-ipad-landscape.png"          media="screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape)">
-		<link rel="apple-touch-startup-image" sizes="768x1004"  for="iPad portrait"           href="320/i/startup-ipad-portrait.png"           media="screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait) ">
-		<link rel="apple-touch-startup-image" sizes="2048x1496" for="iPad Retina landscape"   href="320/i/startup-ipad-retina-landscape.png"   media="screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2)">
-		<link rel="apple-touch-startup-image" sizes="1536x2008" for="iPad Retina portrait"    href="320/i/startup-ipad-retina-portrait.png"    media="screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait)  and (-webkit-min-device-pixel-ratio: 2)">
-		
-		<link rel="apple-touch-startup-image" sizes="480x300"   for="iPhone landscape"        href="320/i/startup-iphone-landscape.png"        media="screen and (max-device-width:320) and (orientation:landscape)">
-		<link rel="apple-touch-startup-image" sizes="320x460"   for="iPhone portrait"         href="320/i/startup-iphone-portrait.png"         media="screen and (max-device-width:320) and (orientation:portrait) ">
-		<link rel="apple-touch-startup-image" sizes="960x600"   for="iPhone Retina landscape" href="320/i/startup-iphone-retina-landscape.png" media="screen and (max-device-width:480px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2)">
-		<link rel="apple-touch-startup-image" sizes="640x920"   for="iPhone Retina portrait"  href="320/i/startup-iphone-retina-portrait.png"  media="screen and (max-device-width:480px) and (orientation:portrait)  and (-webkit-min-device-pixel-ratio: 2)">
+		<link rel="apple-touch-startup-image" sizes="1024x748"  for="iPad landscape"          href="320/i/startup-ipad-landscape.png"          media="(min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape)">
+		<link rel="apple-touch-startup-image" sizes="768x1004"  for="iPad portrait"           href="320/i/startup-ipad-portrait.png"           media="(min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait) ">
+		<link rel="apple-touch-startup-image" sizes="2048x1496" for="iPad Retina landscape"   href="320/i/startup-ipad-retina-landscape.png"   media="(min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2)">
+		<link rel="apple-touch-startup-image" sizes="1536x2008" for="iPad Retina portrait"    href="320/i/startup-ipad-retina-portrait.png"    media="(min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait)  and (-webkit-min-device-pixel-ratio: 2)">
+		<!-- iPhone 并不支持区分横竖屏 -->
+		<link rel="apple-touch-startup-image" sizes="480x300"   for="iPhone landscape"        href="320/i/startup-iphone-landscape.png"        media="(max-device-width:320px) and (orientation:landscape)">
+		<link rel="apple-touch-startup-image" sizes="320x460"   for="iPhone portrait"         href="320/i/startup-iphone-portrait.png"         media="(max-device-width:320px) and (orientation:portrait) ">
+		<link rel="apple-touch-startup-image" sizes="960x600"   for="iPhone Retina landscape" href="320/i/startup-iphone-retina-landscape.png" media="(max-device-width:480px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2)">
+		<link rel="apple-touch-startup-image" sizes="640x920"   for="iPhone Retina portrait"  href="320/i/startup-iphone-retina-portrait.png"  media="(max-device-width:480px) and (orientation:portrait)  and (-webkit-min-device-pixel-ratio: 2)">
 		
 		<link rel="stylesheet" type="text/css" href="320/c/g.css">
 		
 		<style>
 			.icon,.startup{background-size:100%;background-repeat:no-repeat;}
 			
-			@media screen and (min-device-width:481px) and (max-device-width:1024px) {
+			@media (min-device-width:481px) and (max-device-width:1024px) {
 				.icon{text-indent:-99em;width:72px;height:72px;background-image:url(320/i/ico-ipad.png)}
 			}
-			@media screen and (min-device-width:481px) and (max-device-width:1024px) and (-webkit-min-device-pixel-ratio: 2) {
+			@media (min-device-width:481px) and (max-device-width:1024px) and (-webkit-min-device-pixel-ratio: 2) {
 				.icon{text-indent:-99em;width:72px;height:72px;background-image:url(320/i/ico-ipad-retina.png)}
 			}
-			@media screen and (max-device-width:480px) {
+			@media (max-device-width:480px) {
 				.icon{text-indent:-99em;width:57px;height:57px;background-image:url(320/i/ico-iphone.png)}
 			}
-			@media screen and (max-device-width:480px) and (-webkit-min-device-pixel-ratio: 2) {
+			@media (max-device-width:480px) and (-webkit-min-device-pixel-ratio: 2) {
 				.icon{text-indent:-99em;width:57px;height:57px;background-image:url(320/i/ico-iphone-retina.png)}
 			}
 			
 			
-			@media screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape) {
+			@media (min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape) {
 				.startup{text-indent:-99em;height:748px;background-image:url(320/i/startup-ipad-landscape.png)}
 			}
-			@media screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait)  {
+			@media (min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait)  {
 				.startup{text-indent:-99em;height:1004px;background-image:url(320/i/startup-ipad-portrait.png)}
 			}
-			@media screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2) {
+			@media (min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2) {
 				.startup{text-indent:-99em;height:748px;background-image:url(320/i/startup-ipad-retina-landscape.png)}
 			}
-			@media screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait)  and (-webkit-min-device-pixel-ratio: 2) {
+			@media (min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait)  and (-webkit-min-device-pixel-ratio: 2) {
 				.startup{text-indent:-99em;height:1004px;background-image:url(320/i/startup-ipad-retina-portrait.png)}
 			}
-			@media screen and (max-device-width:320) and (orientation:landscape) {
+			@media (max-device-width:320px) and (orientation:landscape) {
 				.startup{text-indent:-99em;height:300px;background-image:url(320/i/startup-iphone-landscape.png)}
 			}
-			@media screen and (max-device-width:320) and (orientation:portrait)  {
+			@media (max-device-width:320px) and (orientation:portrait)  {
 				.startup{text-indent:-99em;height:460px;background-image:url(320/i/startup-iphone-portrait.png)}
 			}
-			@media screen and (max-device-width:480px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2) {
+			@media (max-device-width:480px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2) {
 				.startup{text-indent:-99em;height:300px;background-image:url(320/i/startup-iphone-retina-landscape.png)}
 			}
-			@media screen and (max-device-width:480px) and (orientation:portrait)  and (-webkit-min-device-pixel-ratio: 2) {
+			@media (max-device-width:480px) and (orientation:portrait)  and (-webkit-min-device-pixel-ratio: 2) {
 				.startup{text-indent:-99em;height:460px;background-image:url(320/i/startup-iphone-retina-portrait.png)}
 			}
+
+
+			// Landscape phones and down
+			@media (max-width: 480px) {
+			}
+
+			// Landscape phone to portrait tablet
+			@media (max-width: 768px) {
+			}
+
+			// Portrait tablet to landscape and desktop
+			@media (min-width: 768px) and (max-width: 980px) {
+			}
+
+			// Large desktop
+			@media (min-width: 1200px) {
+			}
+			
 		</style>
 	</head>
 	<body>
 		<h1><a href="?">librajt</a></h1>
-		<h2>Hey there :D</h2>
-		<p>How are you</p>
+		<h2>Hey there</h2>
+		<p>How are you :D</p>
+		
 		<h3>Icon</h3>
 		<div class="icon">not particular</div>
 		<h3>Startup</h3>
 		<div class="startup">not particular</div>
+		
+		<h3>Test</h3>
+		<div class="test"></div>
+		<script>
+			(function(d){
+				var res = ""; 
+				var Sys = {}; 
+				var ua = navigator.userAgent.toLowerCase(); 
+				var s; 
+				(s = ua.match(/msie ([\d.]+)/)) ? Sys.ie = s[1] : 
+				(s = ua.match(/firefox\/([\d.]+)/)) ? Sys.firefox = s[1] : 
+				(s = ua.match(/chrome\/([\d.]+)/)) ? Sys.chrome = s[1] : 
+				(s = ua.match(/opera.([\d.]+)/)) ? Sys.opera = s[1] : 
+				(s = ua.match(/version\/([\d.]+).*safari/)) ? Sys.safari = s[1] : 0; 
+				//以下进行测试 
+				if (Sys.ie) res += 'IE: ' + Sys.ie; 
+				if (Sys.firefox) res += 'Firefox: ' + Sys.firefox; 
+				if (Sys.chrome) res += 'Chrome: ' + Sys.chrome; 
+				if (Sys.opera) res += 'Opera: ' + Sys.opera; 
+				if (Sys.safari) res += 'Safari: ' + Sys.safari; 
+				//输出屏幕相关参数
+				res += "<br>";
+				res += "网页可见区域宽： "               + document.body.clientWidth      + "<br>";
+				res += "网页可见区域高： "               + document.body.clientHeight     + "<br>";
+				res += "网页可见区域宽(包括边线的宽)： " + document.body.offsetWidth      + "<br>";  
+				res += "网页可见区域高(包括边线的高)： " + document.body.offsetHeight     + "<br>";  
+				res += "网页正文全文宽： "               + document.body.scrollWidth      + "<br>";
+				res += "网页正文全文高： "               + document.body.scrollHeight     + "<br>";
+				res += "屏幕分辨率的宽： "               + window.screen.width            + "<br>";
+				res += "屏幕分辨率的高： "               + window.screen.height           + "<br>";
+				res += "屏幕可用工作区宽度： "           + window.screen.availWidth       + "<br>";
+				res += "屏幕可用工作区高度： "           + window.screen.availHeight      + "<br>";
+				res += "window.innerHeight： "           + window.innerHeight             + "<br>";
+				
+				d.querySelector('.test').innerHTML = res;
+			})(document);
+		</script>
+
 	</body>
 </html>
 
