--- a/m/index.html
+++ b/m/index.html
@@ -14,63 +14,51 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		
 		<!-- Web App 在主屏显示的图标 precomposed 指定高光 -->
-		<link 
-			rel="apple-touch-icon-precomposed" 
+		<link rel="apple-touch-icon-precomposed" 
 			sizes="72x72"   for="iPad"          
 			href="320/i/ico-ipad.png">
-		<link 
-			rel="apple-touch-icon-precomposed" 
+		<link rel="apple-touch-icon-precomposed" 
 			sizes="144x144" for="iPad Retina"   
 			href="320/i/ico-ipad-retina.png">
 		
-		<link 
-			rel="apple-touch-icon-precomposed" 
+		<link rel="apple-touch-icon-precomposed" 
 			sizes="57x57"   for="iPhone"        
 			href="320/i/ico-iphone.png">
-		<link 
-			rel="apple-touch-icon-precomposed" 
+		<link rel="apple-touch-icon-precomposed" 
 			sizes="114x114" for="iPhone Retina" 
 			href="320/i/ico-iphone-retina.png">
 		
 		<!-- 应用启动时显示的图像 -->
-		<link 
-			rel="apple-touch-startup-image" 
+		<link rel="apple-touch-startup-image" 
 			sizes="1024x748"  for="iPad landscape"          
 			href="320/i/startup-ipad-landscape.png"          
 			media="(device-width:768px) and (orientation:landscape)">
-		<link 
-			rel="apple-touch-startup-image" 
+		<link rel="apple-touch-startup-image" 
 			sizes="768x1004"  for="iPad portrait"           
 			href="320/i/startup-ipad-portrait.png"           
 			media="(device-width:768px) and (orientation:portrait) ">
-		<link 
-			rel="apple-touch-startup-image" 
+		<link rel="apple-touch-startup-image" 
 			sizes="2048x1496" for="iPad Retina landscape"   
 			href="320/i/startup-ipad-retina-landscape.png"   
 			media="(device-width:768px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2)">
-		<link 
-			rel="apple-touch-startup-image" 
+		<link rel="apple-touch-startup-image" 
 			sizes="1536x2008" for="iPad Retina portrait"    
 			href="320/i/startup-ipad-retina-portrait.png"    
 			media="(device-width:768px) and (orientation:portrait)  and (-webkit-min-device-pixel-ratio: 2)">
 		<!-- iPhone 并不支持区分横竖屏 -->
-		<link 
-			rel="apple-touch-startup-image" 
+		<link rel="apple-touch-startup-image" 
 			sizes="480x300"   for="iPhone landscape"        
 			href="320/i/startup-iphone-landscape.png"        
 			media="(device-width:320px) and (orientation:landscape)">
-		<link 
-			rel="apple-touch-startup-image" 
+		<link rel="apple-touch-startup-image" 
 			sizes="320x460"   for="iPhone portrait"         
 			href="320/i/startup-iphone-portrait.png"         
 			media="(device-width:320px) and (orientation:portrait) ">
-		<link 
-			rel="apple-touch-startup-image" 
+		<link rel="apple-touch-startup-image" 
 			sizes="960x600"   for="iPhone Retina landscape" 
 			href="320/i/startup-iphone-retina-landscape.png" 
 			media="(device-width:320px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2)">
-		<link 
-			rel="apple-touch-startup-image" 
+		<link rel="apple-touch-startup-image" 
 			sizes="640x920"   for="iPhone Retina portrait"  
 			href="320/i/startup-iphone-retina-portrait.png"  
 			media="(device-width:320px) and (orientation:portrait)  and (-webkit-min-device-pixel-ratio: 2)">
