--- a/m/index.html
+++ b/m/index.html
@@ -7,7 +7,7 @@
 		<title>welcome</title>
 		
 		<!-- 遵循自适应设计(RWD, Responsive Web Design)的原则，页面呈现宽度适应屏幕 -->
-		<meta name="viewport" content="width=2047,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 		
 		<!-- 允许应用全屏模式运行，通常称为独立模式 (standalone mode) 可以通过 window.navigator.standalone 属性来区别是否是独立模式运行 -->
 		<meta name="apple-mobile-web-app-capable" content="yes">
@@ -135,9 +135,15 @@
 			// Large desktop
 			@media (min-width: 1200px) {
 			}
+			
+			.wid{width:400px;margin:0 auto;background:#CCC;}
+			@media screen and (min-device-width:320px) and (max-device-width:768px) {
+				.wid{width:100%;}
+			} 
 		</style>
 	</head>
 	<body>
+		<div class="wid">ddd</div>
 		<h1><a href="?">librajt</a></h1>
 		<h2>Hey there</h2>
 		<p>How are you :D</p>
