--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@ title : 404
 header : Error
 ---
 
-##404
+<strong style="font-size:80px;">404</strong>
 
-- - -
+<hr>
 
 Sorry this page does not exist =(
