--- a/404.html
+++ b/404.html
@@ -1,11 +1,9 @@
 ---
 layout: page
-title : 404
+title : Error - 404
 header : Error
 ---
 
-<strong style="font-size:80px;">404</strong>
-
-<hr>
+<strong style="font-size:80px;line-height:2;">404</strong>
 
 Sorry this page does not exist =(
