--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <header>librajt | 玩html，玩css，也玩js</header>
+    <header>librajt</header>
     <section class="main">
         <nav>
             <li class="it it_Post">
