--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </a>
             </li>
             <li class="it it_demos">
-                <a href="/Demos">
+                <a href="/demos">
                     <h2>Demos</h2>
                     <p>代码实践</p>
                 </a>
