--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         body{font-family:Microsoft YaHei,Tahoma,SimSun,Verdana;}
         header{position:absolute;position:fixed;top:0;left:0;right:0;padding:10px;background:rgba(0,0,0,.3);color:#CCC;font-size:14px;line-height:20px;}
         footer{border-top:1px solid #CCC;padding:30px 0;font-size:12px;color:#CCC;text-align:center;}
-        .main{height:100%;box-sizing:border-box;padding-top:40px;background:#49BAF4;}
+        .main{height:100%;box-sizing:border-box;padding-top:40px;background:#E1E1E1;}
         nav{padding:0 30px;}
         nav li{margin:30px 0;}
-        nav li a{display:block;padding:20px;background:#96E264;color:#000;text-decoration:none;}
+        nav li a{display:block;padding:20px;background:#49BAF4;color:#000;text-decoration:none;}
     </style>
 </head>
 <body>
