--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         .main{height:100%;box-sizing:border-box;padding-top:40px;background:#E1E1E1;}
         nav{padding:0 30px;}
         nav li{margin:30px 0;}
-        nav li a{display:block;padding:20px;background:#49BAF4;color:#000;text-decoration:none;}
+        nav li a{display:block;padding:20px;background:#93D6F7;color:#000;text-decoration:none;}
     </style>
 </head>
 <body>
