--- a/index.html
+++ b/index.html
@@ -41,6 +41,31 @@
             </li>
         </nav>
     </section>
-    <footer>librajt &copy; 2014</footer>
+    <footer>
+        librajt &copy; 2014
+        <div
+            class="fb-like"
+            data-share="true"
+            data-width="450"
+            data-show-faces="true">
+        </div>
+    </footer>
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '1019218328160312',
+          xfbml      : true,
+          version    : 'v2.6'
+        });
+      };
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
 </body>
 </html>
