--- a/index.html
+++ b/index.html
@@ -40,15 +40,17 @@
                 </a>
             </li>
         </nav>
+        <div class="infos" style="padding: 0 30px;">
+            <div
+                class="fb-like"
+                data-share="true"
+                data-width="450"
+                data-show-faces="true">
+            </div>
+        </div>
     </section>
     <footer>
         librajt &copy; 2014
-        <div
-            class="fb-like"
-            data-share="true"
-            data-width="450"
-            data-show-faces="true">
-        </div>
     </footer>
     <script>
       window.fbAsyncInit = function() {
