--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </a>
             </li>
         </nav>
-        <div class="infos" style="padding: 0 30px;">
+        <div class="infos" style="padding: 0 30px;overflow: hidden;">
             <div
                 class="fb-like"
                 data-share="true"
